Fix slugs and add newsletters

--- a/models/archive.ini
+++ b/models/archive.ini
@@ -10,6 +10,7 @@ type = string
 [children]
 model = post
 order_by = -pub_date, title
+slug_format = {{ ((this.pub_date) if this.pub_date) ~ "-" ~ this._id }}
 
 [pagination]
 enabled = yes
