--- a/databags/menu+en.ini
+++ b/databags/menu+en.ini
@@ -1,23 +1,1 @@
-[archive]
-path = /archive
-label = Archive
-
-[about]
-path = https://www.torproject.org/about/history
-label = About
-
-[documentation]
-path = https://2019.www.torproject.org/docs/documentation.html.en
-label = Documentation
-
-[support]
-path = https://support.torproject.org/
-label = Support
-
-[blog]
-path = https://blog.torproject.org
-label = Blog
-
-[donate]
-path = https://donate.torproject.org
-label = Donate
+../lego/databags/menu+en.ini
