--- a/databags/menu_footer+en.ini
+++ b/databags/menu_footer+en.ini
@@ -1,15 +1,1 @@
-[jobs]
-path = https://www.torproject.org/about/jobs
-label = Jobs
-
-[blog]
-path = https://blog.torproject.org
-label = Blog
-
-[contact]
-path = https://www.torproject.org/contact
-label = Contact
-
-[press]
-path = https://www.torproject.org/press
-label = Press
+../lego/databags/menu_footer+en.ini
