--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lego"]
 	path = lego
-	url = ssh://git@git.giantrabbit.com/tor/lego.git
+	url = https://git.torproject.org/project/web/lego.git
