add STAGING_URL to .gitlab-ci.yml (tpo/web/team#34)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 ---
 variables:
   SITE_URL: newsletter.torproject.org
+  STAGING_URL: newsletter.staging.torproject.net
 
 include:
   project: tpo/tpa/ci-templates
